--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -1,7 +1,8 @@
 {
-    "window.zoomLevel":  2,
-    "editor.fontSize": 16,
     "editor.fontFamily": "'Inconsolata, Cousine, Source Han Sans CN'",
-    "editor.tabSize": 4,
-    "workbench.colorTheme": "Default Dark+"
+    "editor.fontSize": 16,
+    "editor.tabSize": 2,
+    "window.zoomLevel":  2,
+    "workbench.colorTheme": "Dracula",
+    "workbench.iconTheme": "vscode-icons"
 }
