--- a/vscode/.config/Code - OSS/User/settings.json
+++ b/vscode/.config/Code - OSS/User/settings.json
@@ -4,5 +4,6 @@
     "editor.tabSize": 2,
     "window.zoomLevel":  2,
     "workbench.colorTheme": "Dracula",
-    "workbench.iconTheme": "vscode-icons"
+    "workbench.iconTheme": "vscode-icons",
+    "editor.guides.bracketPairs": true
 }
